# Providentia-Blue

./: .gitignore  README.md  poster.pptx
dashboard/: pyproject.toml
dashboard/app/: __init__.py
dashboard/app/components/: __init__.py
dashboard/app/templates/: base.html.j2
dashboard/dashboard/: __init__.py
dashboard/dashboard/components/: __init__.py  sensors.py  uart.py
dashboard/dashboard/components/eye_tracking/: __init__.py
dashboard/dashboard/components/eye_tracking/gaze_tracking/: pupil.py
dashboard/dashboard/eye_tracking/: __init__.py
dashboard/dashboard/static/css/: clock.css  eye-track.css  graph.css  sensors.css  style.css  tables.css
dashboard/dashboard/static/scss/: clock.scss  eye-track.scss  graph.scss  sensors.scss  style.scss  tables.scss
dashboard/dashboard/templates/: base.html.j2
dashboard/dashboard/templates/components/: clock.html.j2  control.html.j2  eye_tracking.html.j2  flower_state.html.j2  graph.html.j2  grid.html.j2  sensors.html.j2
embedded/mycode/apps/Cicuit_playground_express/: code.py
embedded/mycode/apps/base_nrf52840dk/: CMakeLists.txt  README.md  prj.conf
embedded/mycode/apps/base_nrf52840dk/src/: main.c
embedded/mycode/apps/particle_argon/: CMakeLists.txt  README.md  app.overlay  prj.conf
embedded/mycode/apps/test/: CMakeLists.txt  prj.conf
embedded/mycode/apps/thingy52/: CMakeLists.txt  README.md  prj.conf
embedded/mycode/apps/thingy:52/: CMakeLists.txt  prj.conf
embedded/mycode/include/: argon_uart.h  json_uart.h  scan_adv.h
embedded/mycode/mylib/: argon_uart.c  json_uart.c  scan_adv.c
(+6 files in other folders)
